--- a/BlueFire/src/blueFire/view/FXML_CONFIRMAR.fxml
+++ b/BlueFire/src/blueFire/view/FXML_CONFIRMAR.fxml
@@ -8,13 +8,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="532.0" prefWidth="275.0" style="-fx-background-color: darkblue;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="blueFire.controller.ConfirmaController">
+<AnchorPane id="AnchorPane" prefHeight="532.0" prefWidth="275.0" style="-fx-background-color: darkblue;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blueFire.controller.ConfirmaController">
    <children>
       <Pane layoutX="4.0" layoutY="30.0" prefHeight="499.0" prefWidth="269.0" style="-fx-background-color: white; -fx-border-color: black; -fx-background-radius: 30px;">
          <children>
-            <Button layoutX="68.0" layoutY="414.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="133.0" text="Confirmar" />
-            <Button fx:id="btnFechar" layoutX="247.0" layoutY="-29.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="25.0" style="-fx-background-color: red; -fx-background-radius: 50px;">
+            <Button layoutX="68.0" layoutY="414.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="133.0" style="-fx-cursor: hand;" text="Confirmar" />
+            <Button fx:id="btnFechar" layoutX="247.0" layoutY="-29.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="25.0" style="-fx-background-color: red; -fx-background-radius: 50px; -fx-cursor: hand;">
                <graphic>
                   <ImageView fitHeight="11.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
