--- a/BlueFire/src/blueFire/view/FXML_CONFIRMAR.fxml
+++ b/BlueFire/src/blueFire/view/FXML_CONFIRMAR.fxml
@@ -30,12 +30,20 @@
                   <Image url="@../src/logo.png" />
                </image>
             </ImageView>
-            <Label layoutX="11.0" layoutY="100.0" prefHeight="16.0" prefWidth="154.0" text="Data inicio da locação: " />
-            <Label layoutX="11.0" layoutY="135.0" prefHeight="16.0" prefWidth="146.0" text="Data fim da locação: " />
-            <Label layoutX="10.0" layoutY="171.0" prefHeight="16.0" prefWidth="133.0" text="Quantidade de dias:" />
-            <Label fx:id="lblDtIni" layoutX="168.0" layoutY="100.0" prefHeight="16.0" prefWidth="91.0" />
-            <Label fx:id="lblDtFim" layoutX="165.0" layoutY="135.0" prefHeight="16.0" prefWidth="91.0" />
-            <Label fx:id="lblDias" layoutX="164.0" layoutY="170.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label layoutX="11.0" layoutY="234.0" prefHeight="16.0" prefWidth="154.0" text="Data inicio da locação: " />
+            <Label layoutX="11.0" layoutY="273.0" prefHeight="16.0" prefWidth="146.0" text="Data fim da locação: " />
+            <Label layoutX="10.0" layoutY="311.0" prefHeight="16.0" prefWidth="133.0" text="Quantidade de dias:" />
+            <Label fx:id="lblDtIni" layoutX="174.0" layoutY="234.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label fx:id="lblDtFim" layoutX="174.0" layoutY="273.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label fx:id="lblDias" layoutX="174.0" layoutY="310.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label layoutX="9.0" layoutY="91.0" prefHeight="16.0" prefWidth="146.0" text="Veiculo" />
+            <Label fx:id="lblNome" layoutX="175.0" layoutY="91.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label layoutX="9.0" layoutY="128.0" prefHeight="16.0" prefWidth="146.0" text="Placa:" />
+            <Label fx:id="lblPlaca" layoutX="175.0" layoutY="128.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label layoutX="10.0" layoutY="166.0" prefHeight="16.0" prefWidth="146.0" text="Cor:" />
+            <Label fx:id="lblCor" layoutX="174.0" layoutY="166.0" prefHeight="16.0" prefWidth="91.0" />
+            <Label layoutX="10.0" layoutY="201.0" prefHeight="16.0" prefWidth="146.0" text="Ano:" />
+            <Label fx:id="lblAno" layoutX="174.0" layoutY="201.0" prefHeight="16.0" prefWidth="91.0" />
          </children>
       </Pane>
    </children>
