--- a/BlueFire/src/blueFire/view/FXML_VEICULOS.fxml
+++ b/BlueFire/src/blueFire/view/FXML_VEICULOS.fxml
@@ -6,24 +6,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="532.0" prefWidth="275.0" style="-fx-background-color: darkblue;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="blueFire.controller.VeiculosController">
    <children>
-      <Pane layoutX="3.0" layoutY="28.0" prefHeight="499.0" prefWidth="269.0" style="-fx-background-color: white; -fx-border-color: black; -fx-background-radius: 30px;">
+      <Pane layoutX="3.0" layoutY="3.0" prefHeight="524.0" prefWidth="269.0" style="-fx-background-color: white; -fx-border-color: black; -fx-background-radius: 30px;">
          <children>
-            <Button fx:id="btnFechar" layoutX="246.0" layoutY="-28.0" mnemonicParsing="false" onAction="#fecharJanela" prefHeight="24.0" prefWidth="25.0" style="-fx-background-color: red; -fx-background-radius: 50px; -fx-cursor: hand;">
-               <graphic>
-                  <ImageView fitHeight="11.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../src/baseline_close_black_18dp.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <font>
-                  <Font size="1.0" />
-               </font>
-            </Button>
             <ImageView fitHeight="37.0" fitWidth="169.0" layoutX="10.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../src/logo.png" />
@@ -31,6 +18,15 @@
             </ImageView>
             <ListView fx:id="lvVeiculos" layoutX="11.0" layoutY="66.0" prefHeight="367.0" prefWidth="247.0" />
             <Button layoutX="152.0" layoutY="440.0" mnemonicParsing="false" onAction="#irParaProximaPagina" prefHeight="37.0" prefWidth="106.0" style="-fx-cursor: hand;" text="Continuar" />
+            <Button fx:id="btnRecarregar" layoutX="215.0" layoutY="2.0" mnemonicParsing="false" onAction="#recarregarJanela" prefHeight="37.0" prefWidth="41.0" style="-fx-background-radius: 50px; -fx-background-color: white;">
+               <graphic>
+                  <ImageView fitHeight="37.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../src/reload.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </Pane>
    </children>
